# defispring

./: .gitignore  Cargo.toml  README.md
backend/: Dockerfile  README.md
backend/lauritest/: raw_1.json  raw_2.json  raw_3.json
backend/raw_input/: raw_1.json  raw_2.json  raw_3.json
backend/src/: api_run.rs
backend/src/api/: data_storage.rs  endpoints.rs  merkle_tree.rs  processor.rs  structs.rs
backend/tests/: address_amount_tests.rs  calldata_tests.rs  cumulative_tests.rs  input_cumulative_tests.rs  input_file_tests.rs  map_cums_tests.rs  merkle_tests.rs  other.rs
backend/tests/test_data_input_files/valid/: raw_1.json
contract/: README.md  Scarb.toml  snfoundry.toml
contract/.devcontainer/: devcontainer.json
contract/src/: contract.cairo  erc20.cairo  lib.cairo  merkle_tree.cairo  test_token.cairo  tests.cairo
contract/src/tests/: test.cairo
contract/tests/: test.cairo
frontend/: .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
frontend/src/: App.tsx  data-generator.ts
frontend/src/app/: abi.json  layout.tsx  page.tsx
frontend/src/components/: DeFiSpringAllocation.tsx  StarknetProvider.tsx  WalletBar.tsx  starknet-provider.tsx
frontend/src/pages/: Home.tsx
frontend/src/utils/: utils.ts
src/: air-drop.json  api_run.rs  lib.rs  main.rs  merkle_tree.rs
src/api/: data.rs  data_storage.rs  endpoints.rs  handler.rs  merkle_tree.rs  mod.rs  processor.rs  structs.rs
tests/: calldata_tests.rs  cumulative_tests.rs  other.rs
