[package]
name = "defispring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "api_run"
path = "src/api_run.rs"

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
starknet-crypto = "0.4.2"
actix-web = "4"
lazy_static = "1.4"
regex = "1.10.3"
zip = "0.6.6"

